[Helmi] Update terbaru fixed bug and slicing new pages

--- a/assets/styles/styles.css
+++ b/assets/styles/styles.css
@@ -2073,54 +2073,54 @@ section .gundarGraduates__contents .gundarGraduates__slider::after {
   background: #885A89;
 }
 
-section .gundarGraduates__contents .gundarGraduates__slider .swiper-container {
+section .gundarGraduates__contents .gundarGraduates__slider .swiper-container.swiperGraduates {
   width: 100%;
   height: 100%;
   padding: 50px 0;
 }
 
-section .gundarGraduates__contents .gundarGraduates__slider .swiper-container .swiper-slide {
+section .gundarGraduates__contents .gundarGraduates__slider .swiper-container.swiperGraduates .swiper-slide {
   background-position: center;
   background-size: cover;
   width: 350px;
   height: 100%;
 }
 
-section .gundarGraduates__contents .gundarGraduates__slider .swiper-container .swiper-slide .card {
+section .gundarGraduates__contents .gundarGraduates__slider .swiper-container.swiperGraduates .swiper-slide .card {
   padding: 40px 0;
   text-align: center;
   border-radius: 12px;
   border: 2px solid rgba(0, 0, 0, 0.2);
 }
 
-section .gundarGraduates__contents .gundarGraduates__slider .swiper-container .swiper-slide .card .card__boxImg {
+section .gundarGraduates__contents .gundarGraduates__slider .swiper-container.swiperGraduates .swiper-slide .card .card__boxImg {
   width: 120px;
   height: 120px;
   border-radius: 50%;
   margin: 20px auto;
 }
 
-section .gundarGraduates__contents .gundarGraduates__slider .swiper-container .swiper-slide .card .card__boxImg img {
+section .gundarGraduates__contents .gundarGraduates__slider .swiper-container.swiperGraduates .swiper-slide .card .card__boxImg img {
   width: 100%;
   height: 100%;
   border-radius: 50%;
 }
 
-section .gundarGraduates__contents .gundarGraduates__slider .swiper-container .swiper-slide .card .card-title {
+section .gundarGraduates__contents .gundarGraduates__slider .swiper-container.swiperGraduates .swiper-slide .card .card-title {
   color: #071c4d;
   font-size: 20px;
 }
 
-section .gundarGraduates__contents .gundarGraduates__slider .swiper-container .swiper-slide .card .card-text {
+section .gundarGraduates__contents .gundarGraduates__slider .swiper-container.swiperGraduates .swiper-slide .card .card-text {
   font-size: 16px;
   font-weight: 300;
 }
 
-section .gundarGraduates__contents .gundarGraduates__slider .swiper-container .swiper-slide .card .card__course {
+section .gundarGraduates__contents .gundarGraduates__slider .swiper-container.swiperGraduates .swiper-slide .card .card__course {
   margin: 40px 0 0 0;
 }
 
-section .gundarGraduates__contents .gundarGraduates__slider .swiper-container .swiper-slide .swiper-slide-shadow-left, section .gundarGraduates__contents .gundarGraduates__slider .swiper-container .swiper-slide .swiper-slide-shadow-right {
+section .gundarGraduates__contents .gundarGraduates__slider .swiper-container.swiperGraduates .swiper-slide .swiper-slide-shadow-left, section .gundarGraduates__contents .gundarGraduates__slider .swiper-container.swiperGraduates .swiper-slide .swiper-slide-shadow-right {
   background-image: none;
 }
 
@@ -3772,7 +3772,7 @@ section .gundarGraduates__join .join__container .container .primary__button {
   font-weight: normal;
 }
 
-#alumni .alumni__carouselContext .swiper-container {
+#alumni .alumni__carouselContext .swiper-container.swiperAlumni {
   width: 100%;
   height: 100%;
 }
@@ -3893,47 +3893,47 @@ section .gundarGraduates__join .join__container .container .primary__button {
   }
 }
 
-.alumni__testimonial .alumni__testimonialSlider .swiper-container-2 {
+.alumni__testimonial .alumni__testimonialSlider .swiper-container.swiperTestimonial {
   width: 100%;
   height: 100%;
   position: relative;
 }
 
-.alumni__testimonial .alumni__testimonialSlider .swiper-container-2 .swiper-slide {
+.alumni__testimonial .alumni__testimonialSlider .swiper-container.swiperTestimonial .swiper-slide {
   background-position: center;
   background-size: cover;
   padding: 10px 0;
 }
 
-.alumni__testimonial .alumni__testimonialSlider .swiper-container-2 .swiper-slide .card {
+.alumni__testimonial .alumni__testimonialSlider .swiper-container.swiperTestimonial .swiper-slide .card {
   text-align: center;
   border-radius: 12px;
   border: 2px solid rgba(0, 0, 0, 0.2);
 }
 
-.alumni__testimonial .alumni__testimonialSlider .swiper-container-2 .swiper-slide .card .card__boxImg {
+.alumni__testimonial .alumni__testimonialSlider .swiper-container.swiperTestimonial .swiper-slide .card .card__boxImg {
   width: 120px;
   height: 120px;
   margin: 20px auto;
 }
 
-.alumni__testimonial .alumni__testimonialSlider .swiper-container-2 .swiper-slide .card .card__boxImg img {
+.alumni__testimonial .alumni__testimonialSlider .swiper-container.swiperTestimonial .swiper-slide .card .card__boxImg img {
   width: 100%;
   height: 100%;
   border-radius: 50%;
 }
 
-.alumni__testimonial .alumni__testimonialSlider .swiper-container-2 .swiper-slide .card .card-title {
+.alumni__testimonial .alumni__testimonialSlider .swiper-container.swiperTestimonial .swiper-slide .card .card-title {
   color: #071c4d;
   font-size: 20px;
 }
 
-.alumni__testimonial .alumni__testimonialSlider .swiper-container-2 .swiper-slide .card .card-text {
+.alumni__testimonial .alumni__testimonialSlider .swiper-container.swiperTestimonial .swiper-slide .card .card-text {
   font-size: 16px;
   font-weight: 300;
 }
 
-.alumni__testimonial .alumni__testimonialSlider .swiper-container-2 .swiper-slide .card .card__course {
+.alumni__testimonial .alumni__testimonialSlider .swiper-container.swiperTestimonial .swiper-slide .card .card__course {
   margin: 40px 0 0 0;
 }
 
@@ -4046,7 +4046,7 @@ section .gundarGraduates__join .join__container .container .primary__button {
 }
 
 @media (max-width: 992px) {
-  .alumni__testimonial .alumni__testimonialSlider .swiper-container-2 .swiper-slide {
+  .alumni__testimonial .alumni__testimonialSlider .swiper-container.swiperTestimonial .swiper-slide {
     padding: 10px 1rem;
   }
   .alumni__testimonial .alumni__testimonialSlider .swiper-button-prev, .alumni__testimonial .alumni__testimonialSlider .swiper-button-next {
@@ -4463,14 +4463,14 @@ section .gundarGraduates__join .join__container .container .primary__button {
      object-fit: contain;
 }
 
-#news .news__body .swiper-container {
+#news .news__body .swiper-container.swiperNews {
   overflow: hidden;
   width: 100%;
   height: 100%;
   margin-bottom: 40px;
 }
 
-#news .news__body .swiper-container .swiper-wrapper .swiper-slide {
+#news .news__body .swiper-container.swiperNews .swiper-wrapper .swiper-slide {
   padding: 32px 16px;
   border: 1px solid #885A89;
   border-radius: 12px;
@@ -4491,17 +4491,17 @@ section .gundarGraduates__join .join__container .container .primary__button {
   gap: 10px;
 }
 
-#news .news__body .swiper-container .swiper-wrapper .swiper-slide .contentNews {
+#news .news__body .swiper-container.swiperNews .swiper-wrapper .swiper-slide .contentNews {
   text-align: justify;
 }
 
-#news .news__body .swiper-container .swiper-wrapper .swiper-slide .contentNews .newsContent__boxImage {
+#news .news__body .swiper-container.swiperNews .swiper-wrapper .swiper-slide .contentNews .newsContent__boxImage {
   width: 100%;
   height: 100vh;
   margin-bottom: 16px;
 }
 
-#news .news__body .swiper-container .swiper-wrapper .swiper-slide .contentNews .newsContent__boxImage img {
+#news .news__body .swiper-container.swiperNews .swiper-wrapper .swiper-slide .contentNews .newsContent__boxImage img {
   border-radius: 12px;
   width: 100%;
   height: 100%;
@@ -4610,5 +4610,220 @@ section .gundarGraduates__join .join__container .container .primary__button {
   padding: 6px;
   font-size: 16px;
   text-align: justify;
+}
+
+#location .location__header {
+  margin-top: 20px;
+  text-align: center;
+}
+
+#location .location__header h2 {
+  color: #D1B590;
+  font-size: 24px;
+  font-weight: bold;
+  font-family: 'Playfair Display', sans-serif;
+}
+
+#location .location__header h2::after {
+  content: "";
+  display: block;
+  width: 16%;
+  margin: 20px auto;
+  border-bottom: 2px solid #E3E3E3;
+}
+
+@media (max-width: 576px) {
+  #location .location__header h2 {
+    font-size: 20px;
+  }
+}
+
+#location .location__header h4 {
+  font-size: 32px;
+  margin-bottom: 15px;
+  font-weight: bold;
+  color: #885A89;
+  text-transform: uppercase;
+}
+
+@media (max-width: 576px) {
+  #location .location__header h4 {
+    font-size: 24px;
+  }
+}
+
+#location .location__header .text__header {
+  font-size: 0.75rem;
+}
+
+#location .location__mainContext .location__link-contact {
+  background: #F4F4F4;
+  border-radius: 15px;
+}
+
+#location .location__mainContext .location__link-contact .image__box {
+  width: 80%;
+  height: 100%;
+  margin-bottom: 1.5rem;
+}
+
+#location .location__mainContext .location__link-contact .image__box img {
+  width: 100%;
+  height: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+  -o-object-position: center center;
+     object-position: center center;
+}
+
+#location .location__mainContext .location__link-contact .link h5 {
+  color: #885A89;
+  font-size: 2rem;
+}
+
+#location .location__mainContext .location__link-contact .link .link__content ul {
+  list-style-type: square;
+}
+
+#location .location__mainContext .location__link-contact .link .link__content ul li {
+  margin: 8px 0;
+}
+
+#location .location__mainContext .location__link-contact .link .link__content ul li::marker {
+  color: #8AA7A2;
+}
+
+#location .location__mainContext .location__link-contact .link .link__content ul li a {
+  text-decoration: none;
+  position: relative;
+  font-size: 1.2rem;
+  color: #3b3b3b;
+}
+
+#location .location__mainContext .location__link-contact .link .link__content ul li a::after {
+  content: url("./../images/icons/foreign.png");
+  width: 10px;
+  height: 10px;
+  margin-left: 3px;
+  position: absolute;
+  -webkit-filter: invert(100);
+          filter: invert(100);
+}
+
+#location .location__mainContext .location__link-contact .email__gundar {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: stretch;
+      -ms-flex-align: stretch;
+          align-items: stretch;
+}
+
+#location .location__mainContext .location__link-contact .email__gundar .email__boxImg {
+  width: 50px;
+  height: 50px;
+  margin-right: 25px;
+}
+
+#location .location__mainContext .location__link-contact .email__gundar .email__boxImg img {
+  width: inherit;
+  height: inherit;
+  -o-object-fit: contain;
+     object-fit: contain;
+}
+
+#location .location__mainContext .location__link-contact .email__gundar .email__content h5 {
+  color: #885A89;
+  font-weight: bold;
+}
+
+#location .location__mainContext .location__link-contact .email__gundar .email__content p {
+  font-weight: 600;
+}
+
+#location .location__mainContext .location__link-contact .telephone__gundar {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: stretch;
+      -ms-flex-align: stretch;
+          align-items: stretch;
+}
+
+#location .location__mainContext .location__link-contact .telephone__gundar .telephone__boxImg {
+  width: 50px;
+  height: 50px;
+  margin-right: 25px;
+}
+
+#location .location__mainContext .location__link-contact .telephone__gundar .telephone__boxImg img {
+  width: inherit;
+  height: inherit;
+  -o-object-fit: contain;
+     object-fit: contain;
+}
+
+#location .location__mainContext .location__link-contact .telephone__gundar .telephone__content h5 {
+  color: #885A89;
+  font-weight: bold;
+}
+
+#location .location__mainContext .location__link-contact .telephone__gundar .telephone__content p {
+  font-weight: 600;
+}
+
+@media (max-width: 576px) {
+  #location .text__header {
+    font-size: 1.2rem;
+  }
+}
+
+#keyDates .keyDates__header {
+  margin-top: 20px;
+  text-align: center;
+}
+
+#keyDates .keyDates__header h2 {
+  color: #D1B590;
+  font-size: 24px;
+  font-weight: bold;
+  font-family: 'Playfair Display', sans-serif;
+}
+
+#keyDates .keyDates__header h2::after {
+  content: "";
+  display: block;
+  width: 16%;
+  margin: 20px auto;
+  border-bottom: 2px solid #E3E3E3;
+}
+
+@media (max-width: 576px) {
+  #keyDates .keyDates__header h2 {
+    font-size: 20px;
+  }
+}
+
+#keyDates .keyDates__header h4 {
+  font-size: 32px;
+  margin-bottom: 15px;
+  font-weight: bold;
+  color: #885A89;
+  text-transform: uppercase;
+}
+
+@media (max-width: 576px) {
+  #keyDates .keyDates__header h4 {
+    font-size: 24px;
+  }
+}
+
+#keyDates .keyDates__contents {
+  text-align: justify;
+}
+
+#keyDates .keyDates__contents .keyDates__content__header h5 {
+  font-size: 1.2rem;
+  font-weight: bold;
 }
 /*# sourceMappingURL=styles.css.map */
