--- a/assets/styles/styles.scss
+++ b/assets/styles/styles.scss
@@ -45,6 +45,7 @@
 @import "./pages/profile";
 @import "./pages/lifeGundar";
 @import "./pages/aboutGundar";
-
+@import "./pages/location";
+@import "./pages/keyDates";
 
 
