[Helmi] Update Sidebar Link Login and after login desain

--- a/assets/styles/layouts/_header.scss
+++ b/assets/styles/layouts/_header.scss
@@ -191,6 +191,9 @@ header {
           &:nth-child(6) .accordion-button:after {
             background: none;
           }
+          .login:after {
+            background: none;
+          }
 
           .accordion-body {
             padding: 1rem 0 0 0.8rem;
